Fixed issue with missing word wrap

--- a/src/app/landing-pages/nav/nav.component.scss
+++ b/src/app/landing-pages/nav/nav.component.scss
@@ -89,7 +89,7 @@
     top: 0;
     right: 0;
     background-color: getColor(purple);
-    transition: all 0.3s ease-in;
+    transition: all 300ms ease-in;
     backface-visibility: hidden;
     z-index: 400;
 
