--- a/src/app/main/pages/study/flash-card/flash-card.component.scss
+++ b/src/app/main/pages/study/flash-card/flash-card.component.scss
@@ -268,7 +268,9 @@
   }
 
   &__text {
-    display: inline-block;
-    @include margin(sm, r);
+    // display: inline-block;
+    // @include margin(sm, r);
+    // width: 100%;
+    white-space: pre;
   }
 }
